--- a/qa/rolling-upgrade/build.gradle
+++ b/qa/rolling-upgrade/build.gradle
@@ -56,7 +56,7 @@ task oldClusterTest(type: RestIntegTestTask) {
 oldClusterTestCluster {
     plugin ':x-pack-elasticsearch:plugin'
     distribution = 'zip'
-    bwcVersion = '5.4.0-SNAPSHOT' // TODO: either randomize, or make this settable with sysprop
+    bwcVersion = project.bwcVersion // TODO: either randomize, or make this settable with sysprop
     numBwcNodes = 2
     numNodes = 2
     clusterName = 'rolling-upgrade'
