[TEST] Use SecurityClusterClientYamlTestCase to ensure mappings and templates are present
Original commit: elastic/x-pack-elasticsearch@742633c93c17864480500793255b72337a306a23

--- a/qa/multi-cluster-search-security/build.gradle
+++ b/qa/multi-cluster-search-security/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'elasticsearch.standalone-test'
 
 dependencies {
   testCompile project(path: ':x-pack-elasticsearch:plugin', configuration: 'runtime')
+  testCompile project(path: ':x-pack-elasticsearch:plugin', configuration: 'testArtifacts')
 }
 
 task remoteClusterTest(type: RestIntegTestTask) {
