[TEST] Only run qa cluster with ml enabled.
Relates to elastic/x-pack-elasticsearch#997

Original commit: elastic/x-pack-elasticsearch@863bf9abfe1ac80b85830aa54cee22bf5ffd5c86

--- a/qa/ml-basic-multi-node/build.gradle
+++ b/qa/ml-basic-multi-node/build.gradle
@@ -7,6 +7,8 @@ dependencies {
 
 integTestCluster {
     setting 'xpack.security.enabled', 'false'
+    setting 'xpack.monitoring.enabled', 'false'
+    setting 'xpack.watcher.enabled', 'false'
     setting 'xpack.ml.enabled', 'true'
     numNodes = 3
     distribution = 'zip'
