[ML] Split persistent job params from action request and introduced separate task names to register the persistent tasks executors and params.
Also renamed start and stop datafeed action names to be singular in order to be consistent with open and close action names.

Original commit: elastic/x-pack-elasticsearch@21f7b242cf06dc5d6ebcd4e1e902c6b8b950adc6

--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yaml
@@ -339,7 +339,7 @@
       cluster.state:
         metric: [ metadata ]
         filter_path: metadata.persistent_tasks
-  - match: {"metadata.persistent_tasks.tasks.0.task.cluster:admin/xpack/ml/job/open.status.state": opened}
+  - match: {"metadata.persistent_tasks.tasks.0.task.xpack/ml/job.status.state": opened}
 
   - do:
       xpack.ml.close_job:
@@ -396,7 +396,7 @@
       cluster.state:
         metric: [ metadata ]
         filter_path: metadata.persistent_tasks
-  - match: {"metadata.persistent_tasks.tasks.0.task.cluster:admin/xpack/ml/job/open.status.state": opened}
+  - match: {"metadata.persistent_tasks.tasks.0.task.xpack/ml/job.status.state": opened}
 
   - do:
       xpack.ml.close_job:
