Move integ test runner deps to cluster deps (elastic/x-pack-elasticsearch#1096)
This is the xpack side of elastic/elasticsearch#24142

Original commit: elastic/x-pack-elasticsearch@d502f06cea4ef06b7047bcc4c69f9c773feb6a8b

--- a/qa/multi-cluster-search-security/build.gradle
+++ b/qa/multi-cluster-search-security/build.gradle
@@ -38,11 +38,10 @@ remoteClusterTestRunner {
   systemProperty 'tests.rest.suite', 'remote_cluster'
 }
 
-task mixedClusterTest(type: RestIntegTestTask) {
-  dependsOn(remoteClusterTestRunner)
-}
+task mixedClusterTest(type: RestIntegTestTask) {}
 
 mixedClusterTestCluster {
+  dependsOn remoteClusterTestRunner
   plugin ':x-pack-elasticsearch:plugin'
   setting 'xpack.watcher.enabled', 'false'
   setting 'xpack.monitoring.enabled', 'false'
