--- a/qa/rolling-upgrade/build.gradle
+++ b/qa/rolling-upgrade/build.gradle
@@ -71,11 +71,10 @@ oldClusterTestRunner {
   systemProperty 'tests.rest.suite', 'old_cluster'
 }
 
-task mixedClusterTest(type: RestIntegTestTask) {
-    dependsOn(oldClusterTestRunner, 'oldClusterTestCluster#node1.stop')
-}
+task mixedClusterTest(type: RestIntegTestTask) {}
 
 mixedClusterTestCluster {
+    dependsOn oldClusterTestRunner, 'oldClusterTestCluster#node1.stop'
     plugin ':x-pack-elasticsearch:plugin'
     distribution = 'zip'
     clusterName = 'rolling-upgrade'
@@ -92,11 +91,10 @@ mixedClusterTestRunner {
     finalizedBy 'oldClusterTestCluster#node0.stop'
 }
 
-task upgradedClusterTest(type: RestIntegTestTask) {
-    dependsOn(mixedClusterTestRunner, 'oldClusterTestCluster#node0.stop')
-}
+task upgradedClusterTest(type: RestIntegTestTask) {}
 
 upgradedClusterTestCluster {
+    dependsOn mixedClusterTestRunner, 'oldClusterTestCluster#node0.stop'
     plugin ':x-pack-elasticsearch:plugin'
     distribution = 'zip'
     clusterName = 'rolling-upgrade'
