[TEST] Test explicitly for the watch we're interested in
Original commit: elastic/x-pack-elasticsearch@71bd0aee7e7aeed54f1d256a5ca85c70692b607c

--- a/plugin/src/test/resources/rest-api-spec/test/watcher/activate_watch/10_basic.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/watcher/activate_watch/10_basic.yaml
@@ -52,6 +52,7 @@
   - do:
       search:
         index: .watches
+        body: { "query": { "term": { "_id": "my_watch" } } }
   - match: { hits.total: 1 }
   - match: { hits.hits.0._source._status.state.active: false }
 
@@ -71,6 +72,7 @@
   - do:
       search:
         index: .watches
+        body: { "query": { "term": { "_id": "my_watch" } } }
   - match: { hits.total: 1 }
   - match: { hits.hits.0._source._status.state.active: true }
 
