--- a/modules/analysis-common/build.gradle
+++ b/modules/analysis-common/build.gradle
@@ -17,10 +17,7 @@
  * under the License.
  */
 
-package org.elasticsearch.index.analysis;
-
-import org.elasticsearch.AnalysisFactoryTestCase;
-
-public class AnalysisFactoryTests extends AnalysisFactoryTestCase {
-    // tests are inherited and nothing needs to be defined here
+esplugin {
+    description 'Adds "built in" analyzers to Elasticsearch.'
+    classname 'org.elasticsearch.analysis.common.CommonAnalysisPlugin'
 }
