[TEST] Increase ml datafeed logging to understand test failure
DatafeedJobsIT has been failing. This change increases logging
to investigate those failures.

Original commit: elastic/x-pack-elasticsearch@0c7c29ac2995ed45b8255188f837ebbabb642ac2

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -334,6 +334,7 @@ integTestRunner {
 
 integTestCluster {
   setting 'xpack.ml.enabled', 'true'
+  setting 'logger.org.elasticsearch.xpack.ml.datafeed', 'TRACE'
   // Integration tests are supposed to enable/disable exporters before/after each test
   setting 'xpack.monitoring.exporters._local.type', 'local'
   setting 'xpack.monitoring.exporters._local.enabled', 'false'
