Rest endpoints for token based access (elastic/x-pack-elasticsearch#1235)
This commit adds rest endpoints for the creation of a new token and invalidation of an existing
token. This builds upon the functionality that was introduced in elastic/x-pack-elasticsearch#1029.

relates elastic/x-pack-elasticsearch#8

Original commit: elastic/x-pack-elasticsearch@d56611dfa335dddce8e5e103dcac4e6610fc7b4e

--- a/docs/build.gradle
+++ b/docs/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'elasticsearch.docs-test'
 buildRestTests.expectedUnconvertedCandidates = [
         'en/ml/getting-started.asciidoc',
         'en/rest-api/security/users.asciidoc',
+        'en/rest-api/security/tokens.asciidoc',
         'en/rest-api/watcher/put-watch.asciidoc',
         'en/rest-api/ml/post-data.asciidoc',
         'en/security/authentication/user-cache.asciidoc',
